--- a/src/css/base/_font.scss
+++ b/src/css/base/_font.scss
@@ -15,8 +15,18 @@ body {
 	text-align: center;
 	text-transform: uppercase;
 	margin-top: 100px;
-	padding-bottom: 4px
+	padding-bottom: 4px;
+
+	a {
+		color: black;
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 }
+
 
 nav {
 	display:block;
@@ -29,6 +39,7 @@ nav {
 	li {
 		display: inline-block;
 		margin-left: 8px;
+		margin-right: 8px;
 		text-transform: uppercase;
 	}
 
@@ -42,4 +53,14 @@ nav {
 	}
 }
 
+h1 {
+	a {
+		color: black;
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
 
