centered photo components

--- a/src/css/base/_font.scss
+++ b/src/css/base/_font.scss
@@ -27,12 +27,12 @@ body {
 	}
 }
 
-
 nav {
 	display:block;
 	font-size: 16px;
 	margin: 0 auto;
 	margin-top: 8px;
+	margin-bottom: 16px;
 	padding-top: 6px;
 	width: fit-content;
 
