modularized some blog+photo post styling

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,6 @@
 @import 'base/reset';
 @import 'base/font';
 @import 'base/layout';
+@import 'base/mixins';
 @import 'components/photocomponent';
+@import 'components/blogpost';
