--- a/src/css/base/_font.scss
+++ b/src/css/base/_font.scss
@@ -8,13 +8,18 @@ body {
 	font-family: $font-stack;
 }
 
+@mixin post-title-font {
+	font-size: 24px;
+	text-align: center;
+}
+
 #title {
 	border-bottom: 1px solid #555;
 	font-size: 40px;
 	font-weight: 300;
+	margin-top: 40px;
 	text-align: center;
 	text-transform: uppercase;
-	margin-top: 100px;
 	padding-bottom: 4px;
 
 	a {
