--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,4 +3,5 @@
 @import 'base/layout';
 @import 'base/mixins';
 @import 'components/photocomponent';
+@import 'components/projectpost';
 @import 'components/blogpost';
