--- a/src/css/components/_blogpost.scss
+++ b/src/css/components/_blogpost.scss
@@ -4,10 +4,7 @@ div {
 }
 
 .blogDate {
-	font-size: 18px;
-	text-align: center;
-	font-style: italic;
-	margin-top: 10px;
+	@include date-font;
 }
 
 .blogContent {
