--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,6 +2,7 @@
 @import 'base/mixins';
 @import 'base/font';
 @import 'base/layout';
+@import 'base/github-markdown';
 @import 'components/photocomponent';
 @import 'components/projectpost';
 @import 'components/blogpost';
