margined text-content in About and Blog. Tweeked general link formatting to look less terrible

--- a/src/css/base/_font.scss
+++ b/src/css/base/_font.scss
@@ -40,6 +40,15 @@ body {
 	}
 }
 
+a {
+	color: black;
+	text-decoration: none;
+
+	&:hover {
+		text-decoration: underline;
+	}
+}
+
 nav {
 	display:block;
 	font-size: 16px;
