--- a/src/css/base/_image.scss
+++ b/src/css/base/_image.scss
@@ -7,6 +7,13 @@
 #pennapps {
 	width: 400px;
 	margin: 10px;
+	margin-right: 50px;
 	position: absolute;
 	right: 0px;
+}
+
+#pennappsContainer {
+	height: 300px;
+	width: 200px;
+
 }
