--- a/src/css/components/_projectpost.scss
+++ b/src/css/components/_projectpost.scss
@@ -3,6 +3,15 @@ div {
 	margin: auto;
 }
 
+
+a {
+	color: #4078c0;
+		text-decoration: none;
+		&:hover {
+			text-decoration: underline;
+		}
+}
+
 .projectDescript {
 	margin-top: 4px;
 }
