added a build cmd to save index.html in proper location

--- a/src/css/base/_reset.scss
+++ b/src/css/base/_reset.scss
@@ -21,6 +21,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
   line-height: 1;
+  background-color: #EDEDED;
+}
+
+h1 {
+  margin-top: 0px;
+  background-color: #B7B3BF;
 }
 
 ol,
