--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4,6 +4,7 @@
 @import 'base/layout';
 @import 'base/image';
 @import 'base/github-markdown';
+@import 'components/header';
 @import 'components/photocomponent';
 @import 'components/projectpost';
 @import 'components/blogpost';
