removed header margin + added spacing better blogposts

--- a/src/css/base/_font.scss
+++ b/src/css/base/_font.scss
@@ -35,13 +35,13 @@ body {
 }
 
 #title {
-	border-bottom: 1px solid #555;
+	border-bottom: 2px solid #A5A6A8;
 	font-size: 40px;
 	font-weight: 300;
-	margin-top: 40px;
 	text-align: center;
 	text-transform: uppercase;
-	padding-bottom: 4px;
+	padding-bottom: 15px;
+	padding-top: 45px;
 
 	a {
 		color: black;
