--- a/src/css/components/_blogpost.scss
+++ b/src/css/components/_blogpost.scss
@@ -19,7 +19,9 @@ div {
 
 .blogPost {
 	@include post-tile;
-	padding-top: 20px;
+	&:hover {
+		box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	}
 }
 
 .blogTitle {
