added padding to post tiles

--- a/src/css/base/_mixins.scss
+++ b/src/css/base/_mixins.scss
@@ -9,7 +9,7 @@
 	margin-bottom: 40px;
 	margin-left: 20%;
 	margin-right: 20%;
-	padding: 20px 5px 20px 5px;
+	padding: 35px 5% 25px 5%;
 	width: 60%;
 }
 
